--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,2 @@
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<h1>Welcome to the Fintraker</h1>
+<%= link_to  "Logout", destroy_user_session_path, method: :delete %>
