--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,14 +23,13 @@
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-       
-      </div><!--/row-->
+      
 
-      <footer>
+      <footer id="space">
         <p>&copy; Fintraker.io 2018</p>
       </footer>
 
-    </div> <!-- /container -->
+    </div>
 
   </body>
 </html>
