--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,29 @@
-<h1>Welcome to the Fintraker</h1>
+ <div align="center" class="jumbotron text" id="image" >
+   <h1>Welcome to the Fintraker</h1>
+   <h4>Track Stocks and Make new friends </h4>
+</div>
+
+<hr>
+<div class="row container">
+  <div class="col-md-6">
+    <div class="panel panel-success">
+        <div class="panel-heading big"><i class="glyphicon glyphicon-eye-open" style="font-size:40px;"></i> Track stocks</div>
+        <div class="panel-body">
+          <h3>Track stocks from around the world</h3>
+        </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="panel panel-success">
+        <div class="panel-heading big"><i class="fa fa-users" style="font-size:40px;"></i>Make friends</div>
+        <div class="panel-body">
+          <h3>Make new friends</h3>
+        </div>
+    </div>
+  </div>
+  </div>
+
+  <div>
+    <h1>Get Stocking Now! <small>by using the navigation actions above.</small> </h1>
+  </div>
+</div>
